k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: minikube.local.top
    http:
      paths:
      - path: /test
        backend:
          serviceName: test-ci-service
          servicePort: 3000
